src/test/ui/inline-const/const-match-pat-generic.stderr
error[E0158]: const parameters cannot be referenced in patterns
  --> $DIR/const-match-pat-generic.rs:9:9
   |
LL |         const { V } => {},
   |         ^^^^^^^^^^^

error: constant pattern depends on a generic parameter
  --> $DIR/const-match-pat-generic.rs:21:9
   |
LL |         const { f(V) } => {},
   |         ^^^^^^^^^^^^^^

error: constant pattern depends on a generic parameter
  --> $DIR/const-match-pat-generic.rs:21:9
   |
LL |         const { f(V) } => {},
   |         ^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0158`.
